Home work 06 javascript

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Class work</title>
+  <title>Home work 06</title>
 </head>
 <body>
 
@@ -18,9 +18,6 @@
   <!-- <script src="work-08.js" type="module"></script> -->
   <!-- <script src="work-09.js" type="module"></script> -->
   <!-- <script src="work-10.js" type="module"></script> -->
-  <!-- <script src="work-0.js" type="module"></script> -->
-  <!-- <script src="work-00.js" type="module"></script> -->
-  <!-- <script src="work-000.js" type="module"></script> -->
 
 </body>
 </html>
